--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
         <title>Instagram</title>
     </head>
     <body>
-
+        <div class="instagram-wrapper">
+            <div class="instagram-phone">
+                <img src="./img/instagram-celular.png" alt="Celular">
+            </div>
+            <div class="instagram-continue">
+                <div class="group">
+                    <img src="./img/instagram-text.png" class="instagram-logo" alt="Instagram logo">
+                    <div class="profile-photo">
+                        <img src="./img/foto-perfil.webp" alt="Foto de perfil">
+                    </div>
+                    <a href="#" class="instagram-login">Continue como Matheus</a>
+                    <a href="#" class="instagram-logout">Remover conta</a>
+                </div>
+                <div class="group">
+                    <p class="not-account">Não é Matheus?</p>
+                    <p class="not-account">
+                        <span class="link-blue">Alternar contas</span>
+                        ou 
+                        <span class="link-blue">Inscreva-se</span>
+                    </p>
+                </div>
+                <div class="get-the-app">
+                    <p class="get-app">Baixe o aplicativo</p>
+                    <div class="download">
+                        <a href="#" class="app-download"></a>
+                        <a href="#" class="app-download"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
